# taxonia_api

./: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.sqlx/: query-a6b03b9ab3a50aa4d194ccd707ae5c544483647043d5f82e453a56946690af68.json
migrations/: 20251007175627_users.sql  20251125235139_create_users.sql  20251126000154_create_auth_identities.sql  20251127003400_create_quiz_results.sql
src/: app_error.rs  auth_repo.rs  config.rs  db.rs  main.rs  models.rs  session.rs  session_store.rs  state.rs  user.rs
src/clients/: inat.rs  mod.rs
src/repos/: mod.rs  quiz_repo.rs  user_repo.rs
src/routes/: auth.rs  health_check.rs  mod.rs  quiz.rs
src/services/: auth.rs  inat.rs  mod.rs  rand.rs
