[package]
name = "taxonia_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "uuid",
    "runtime-tokio-rustls",
    "chrono"
] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
anyhow = "1.0.98"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde = "1.0.228"
thiserror = "2.0.17"
tower-sessions = "0.14.0"
bcrypt = "0.17.1"
serde_json = "1.0.145"
poem = { version = "3.1.12", features = ["session"] }
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
chrono = "0.4.42"
redis = "0.32.7"
argon2 = "0.5.3"
